--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,29 +1,37 @@
-.nav{
+/* Header.css */
+body {
+    margin: 0; /* Elimina los márgenes predeterminados */
+    padding: 0; /* Elimina el relleno predeterminado */
+  }
+
+.nav {
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
-    background-color:rgba(129, 172, 185, 0.888);
+    justify-content: flex-start; /* Alinea todo a la izquierda */
+    background-color: #000; /* Fondo negro */
+    height: 100px; /* Aumenta la altura */
     list-style: none;
-}
-.header{
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-.logo{
-    border-radius: 60px;
-    width: 70px;
-}
-.content_nav{
-    color: aliceblue;
-    padding: 15px;
-}
-a{
+    align-items: center; /* Alinea verticalmente el contenido al centro */
+    padding: 0 20px; /* Agrega un relleno en los lados para separar el contenido de los bordes */
+  }
+  
+  .logo {
+    border-radius: 50%; /* Hace que el logo sea redondo */
+    width: 60px;
+    height: 60px; /* Ajusta el alto para que sea un círculo */
+    margin-right: 25px; /* Espacio entre el logo y el texto */
+  }
+  
+  .nav a {
     text-decoration: none;
-    color:rgb(73, 78, 82);
-}
+    color: white; /* Cambia el color del texto a blanco */
+    font-size: 18px; /* Aumenta el tamaño de la letra */
+    margin-right: 20px; /* Espacio entre enlaces */
+  }
+  
+  /* Cambia la tipografía a sans-serif para todo el encabezado */
+  .nav,
+  .nav a {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
