--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,37 +1,47 @@
 /* Header.css */
 body {
-    margin: 0; /* Elimina los márgenes predeterminados */
-    padding: 0; /* Elimina el relleno predeterminado */
-  }
+  margin: 0; 
+  padding: 0; 
+  font-family: Arial, Helvetica, sans-serif; /* Cambia la tipografía para todo el cuerpo */
+}
 
 .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start; /* Alinea todo a la izquierda */
-    background-color: #000; /* Fondo negro */
-    height: 100px; /* Aumenta la altura */
-    list-style: none;
-    align-items: center; /* Alinea verticalmente el contenido al centro */
-    padding: 0 20px; /* Agrega un relleno en los lados para separar el contenido de los bordes */
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  background-color: #000; 
+  list-style: none;
+  padding: 20px; 
+  text-align: center; 
+}
+
+.logo {
+  border-radius: 50%; 
+  width: 60px;
+  height: 60px; 
+  margin-bottom: 10px; 
+}
+
+.nav a {
+  text-decoration: none;
+  color: white; 
+  font-size: 18px; 
+  margin-bottom: 10px; 
+}
+
+/* Media Query para pantallas más grandes */
+@media (min-width: 768px) {
+  .nav {
+    flex-direction: row; 
+    justify-content: flex-start; 
+    height: auto; 
   }
-  
+
   .logo {
-    border-radius: 50%; /* Hace que el logo sea redondo */
-    width: 60px;
-    height: 60px; /* Ajusta el alto para que sea un círculo */
-    margin-right: 25px; /* Espacio entre el logo y el texto */
+    margin-right: 25px; 
   }
-  
+
   .nav a {
-    text-decoration: none;
-    color: white; /* Cambia el color del texto a blanco */
-    font-size: 18px; /* Aumenta el tamaño de la letra */
-    margin-right: 20px; /* Espacio entre enlaces */
+    margin-right: 30px; 
   }
-  
-  /* Cambia la tipografía a sans-serif para todo el encabezado */
-  .nav,
-  .nav a {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
+}
