--- a/src/screens/AlbumDetail/albumDetail.css
+++ b/src/screens/AlbumDetail/albumDetail.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center; /* Centra verticalmente */
-    background-color: #f0f0f0; /* Cambia a un fondo gris claro */
+    background-color: #581212; /* Cambia a un fondo gris claro */
     flex-direction: column;
     min-height: 100vh; /* Asegura que el contenedor ocupe al menos toda la altura de la ventana */
     text-align: center; /* Centra horizontalmente el contenido de texto */
@@ -13,6 +13,7 @@
     font-family: 'Work Sans', sans-serif;
     text-align: center;
     margin: 10px 0; /* Agrega espacio entre los elementos de texto */
+    color: white;
   }
   
   .imagen {
@@ -27,6 +28,7 @@
     text-align: center;
     list-style: none; /* Elimina los bullet points */
     padding: 0; /* Elimina el relleno predeterminado de la lista */
+    color: white;
   }
   
   .lista li {
