--- a/src/components/TrackList/trackList.css
+++ b/src/components/TrackList/trackList.css
@@ -1,15 +1,10 @@
-/* Estilo para todos los enlaces dentro del componente TrackList */
-/* Estilo para el fondo rojo en los elementos TrackList */
-.content {
-    height: auto; /* Ajusta la altura automáticamente al contenido */
-    display: flex;
-    flex-direction: row;
-    overflow: hidden;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    padding: 10px; /* Espaciado interno */
-  }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+  
 .card {
     background-color: red; /* Cambia "red" al color de fondo rojo que prefieras */
     margin: 25px;
@@ -21,6 +16,16 @@
     width: 300px; /* Ancho automático según el contenido */
     display: flex;
     flex-direction: column;
+  }
+
+  .content {
+    height: auto; /* Ajusta la altura automáticamente al contenido */
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    padding: 10px; /* Espaciado interno */
   }
   
 .content a {
@@ -42,5 +47,6 @@
   .content button:hover {
     background-color: #26ed8a; /* Cambio de color al pasar el mouse */
   }
+  
   
   
