--- a/src/components/TrackList/trackList.css
+++ b/src/components/TrackList/trackList.css
@@ -1,21 +1,27 @@
+/* albumList.css */
 
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    box-sizing: border-box;
+    list-style-type: none;
 }
   
 .card {
-    background-color: red; /* Cambia "red" al color de fondo rojo que prefieras */
+    background-color: #252525; /* Cambia el color de fondo */
     margin: 25px;
     padding: 20px; /* Ajusta el espacio interno según tus preferencias */
     color: rgb(35, 34, 52);
     border-radius: 20px;
-    border: solid 2px #252525;
     max-width: 100%; /* Ancho máximo del 100% del contenedor padre */
     width: 300px; /* Ancho automático según el contenido */
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .content {
@@ -33,6 +39,15 @@ body {
     color: white; /* Texto blanco */
   }
   
+  .card img{
+   width: 200px;
+   height: 200px;
+  margin: 15px 0;
+  }
+
+  .artist, .duration{
+    color:rgb(103, 106, 120)
+  }
   /* Estilo para el botón "View more" */
   .content button {
     background-color: rgb(30, 215, 96); /* Fondo verde */
@@ -48,5 +63,11 @@ body {
     background-color: #26ed8a; /* Cambio de color al pasar el mouse */
   }
   
-  
+  .button-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+  }
   
