--- a/src/screens/Tracks/tracks.css
+++ b/src/screens/Tracks/tracks.css
@@ -1,1 +1,40 @@
-body{background-color: black;}
+.body {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    list-style-type: none;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.search-tracks{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+.search-tracks input[type="text"]{
+    width: 100%;
+  max-width: 300px;
+  padding: 10px;
+  font-size: 18px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-tracks button[type="submit"] {
+    margin-left: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: rgb(30, 215, 96);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  @media (min-width: 768px) {
+    .search-tracks input[type="text"] {
+      width: 700px;
+    }
+  }
