--- a/src/screens/AlbumDetail/albumDetail.css
+++ b/src/screens/AlbumDetail/albumDetail.css
@@ -11,20 +11,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* Centra verticalmente */
   background-color: #0e0e0e;
   flex-direction: column;
   min-height: 100vh;
-  /* Asegura que el contenedor ocupe al menos toda la altura de la ventana */
   text-align: center;
-  /* Centra horizontalmente el contenido de texto */
 }
 
 .title {
   font-family: 'Work Sans', sans-serif;
   text-align: center;
   margin: 10px 0;
-  /* Agrega espacio entre los elementos de texto */
   color: white;
   font-size: 40px;
   font-weight: bolder;
@@ -40,7 +36,6 @@ body {
   height: 400px;
   align-self: center;
   margin: 15px 0;
-  /* Agrega espacio entre la imagen y otros elementos */
 }
 
 .genre,
@@ -56,9 +51,7 @@ body {
   font-family: 'Work Sans', sans-serif;
   text-align: center;
   list-style: none;
-  /* Elimina los bullet points */
   padding: 0;
-  /* Elimina el relleno predeterminado de la lista */
   color: white;
   font-size: 20px;
   font-weight: 300;
@@ -66,26 +59,22 @@ body {
 
 .lista li {
   margin: 5px 0;
-  /* Agrega espacio entre elementos de la lista */
 }
 
-/* Estilo para el botón cuando es favorito (verde) */
 .boton.favorite {
-  background-color: #26ed8a; /* Cambia a tu color verde deseado */
-  color: white; /* Texto en blanco */
+  background-color: #26ed8a; 
+  color: white; 
 }
 
-/* Estilo para el botón cuando no es favorito (gris) */
 .boton.not-favorite {
-  background-color: green; /* Cambia a tu color gris deseado */
-  color: white; /* Texto en blanco */
+  background-color: green; 
+  color: white; 
 }
 
 @media (min-width: 768px) {
   .imagen {
     margin-top: 40px;
     width: 600px;
-    /* Reduce el tamaño de la imagen en pantallas más pequeñas */
     height: 600px;
   }
 
