--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -20,10 +20,13 @@ footer {
     color: white;
     list-style: none;
     font-family: sans-serif; /* Cambia la fuente a sans-serif */
-    font-size: 12px;
+    font-size: 14px;
   }
-  
-  .footer-team li {
-    padding: 0px 10px;
+
+@media(min-width: 768px){
+  .footer-team{
+    font-size:  20px;
   }
+}
+
   
