--- a/src/screens/Favorites/favorites.css
+++ b/src/screens/Favorites/favorites.css
@@ -1,3 +1,25 @@
 body{
-    color: white
+    margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  box-sizing: border-box;
+  list-style-type: none;
+  color: white
+}
+
+.nofavorites{
+    height: 50vh;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 50%;
+}
+
+@media (min-width: 768px){
+    .nofavorites{
+        height: 40vh;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 13%;
+    }
 }
